# illumination_thesis_bachelor_innopolis

./: .gitignore  Makefile  README.md  conftest.py  paths.yaml  pyproject.toml  requirements.txt
configs/data/: celebdf.yaml  dfdc.yaml  dff.yaml  ffpp.yaml
configs/eval/: d_eval.yaml  e_robustness.yaml  eval_config.yaml  f_taxonomy.yaml  report.yaml
configs/stage1/: b1_ablation.yaml  b2_bottleneck.yaml  b3_context_crop.yaml  b4_fixed_fusion.yaml
configs/stage2/: c3_train_regimes.yaml  c4_dl_quartile.yaml  c5_shortcuts.yaml  tsbi.yaml
experiments/: README.md  a2_crop.py  a5_noise_precompute.py  b1_ablation.py  b2_bottleneck.py  b3_context_crop.py  b4_fixed_fusion.py  c1_generate_sbi.py  c1_generate_tsbi.py  c2_build_manifests.py  c3_train_regimes.py  c4_dl_quartile.py  c5_shortcuts.py  d_eval.py  e_robustness.py  f_taxonomy.py  g_report.py
src/data/: README.md  dataset.py  download_ffpp.py  extract_mtcnn.py  ffpp_splits.py  manifest.py  mtcnn_utils.py
src/eval/: README.md  aggregation.py  bootstrap.py  cache.py  metrics.py  threshold_sweep.py
src/models/: README.md  efficientnet.py  late_fusion.py  noiseprintpp.py  resaware_fusion.py  resblock.py  residual_only.py  rgb_only.py  statnoise_fusion.py  xception.py
src/noise/: README.md  bottleneck.py  context_crop.py  precompute.py
src/report/: README.md  figures.py  manifest_doc.py  tables.py
src/robustness/: README.md  grid.py  perturbations.py
src/sbi/: generator.py
src/taxonomy/: README.md  attributes.py  contingency.py
src/train/: README.md  loop.py  stage2_loop.py
src/tsbi/: README.md  gating.py  generator.py  shortcuts.py
src/utils/: README.md  paths.py
tests/: README.md
tests/fixtures/: build_tiny_corpus.py
tests/fixtures/tiny_corpus/: manifest.csv
tests/integration/: test_tiny_pipeline.py
tests/unit/: test_ffpp_splits.py  test_manifest.py  test_metrics.py  test_models.py  test_report.py  test_robustness.py  test_taxonomy.py  test_tsbi.py
